tests/baselines/reference/deleteOperatorWithBooleanType.errors.txt
tests/cases/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithBooleanType.ts(17,31): error TS2703: The operand of a 'delete' operator must be a property reference.
tests/cases/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithBooleanType.ts(20,31): error TS2703: The operand of a 'delete' operator must be a property reference.
tests/cases/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithBooleanType.ts(21,31): error TS2703: The operand of a 'delete' operator must be a property reference.
tests/cases/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithBooleanType.ts(26,31): error TS2703: The operand of a 'delete' operator must be a property reference.
tests/cases/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithBooleanType.ts(27,31): error TS2703: The operand of a 'delete' operator must be a property reference.
tests/cases/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithBooleanType.ts(30,31): error TS2703: The operand of a 'delete' operator must be a property reference.
tests/cases/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithBooleanType.ts(30,38): error TS2703: The operand of a 'delete' operator must be a property reference.
tests/cases/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithBooleanType.ts(33,8): error TS2703: The operand of a 'delete' operator must be a property reference.
tests/cases/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithBooleanType.ts(34,8): error TS2703: The operand of a 'delete' operator must be a property reference.
tests/cases/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithBooleanType.ts(35,8): error TS2703: The operand of a 'delete' operator must be a property reference.
tests/cases/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithBooleanType.ts(36,8): error TS2703: The operand of a 'delete' operator must be a property reference.


==== tests/cases/conformance/expressions/unaryOperators/deleteOperator/deleteOperatorWithBooleanType.ts (11 errors) ====
    // delete  operator on boolean type
    var BOOLEAN: boolean;
    
    function foo(): boolean { return true; }
    
    class A {
        public a: boolean;
        static foo() { return false; }
    }
    module M {
        export var n: boolean;
    }
    
    var objA = new A();
    
    // boolean type var
    var ResultIsBoolean1 = delete BOOLEAN;
                                  ~~~~~~~
!!! error TS2703: The operand of a 'delete' operator must be a property reference.
    
    // boolean type literal
    var ResultIsBoolean2 = delete true;
                                  ~~~~
!!! error TS2703: The operand of a 'delete' operator must be a property reference.
    var ResultIsBoolean3 = delete { x: true, y: false };
                                  ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2703: The operand of a 'delete' operator must be a property reference.
    
    // boolean type expressions
    var ResultIsBoolean4 = delete objA.a;
    var ResultIsBoolean5 = delete M.n;
    var ResultIsBoolean6 = delete foo();
                                  ~~~~~
!!! error TS2703: The operand of a 'delete' operator must be a property reference.
    var ResultIsBoolean7 = delete A.foo();
                                  ~~~~~~~
!!! error TS2703: The operand of a 'delete' operator must be a property reference.
    
    // multiple delete  operator
    var ResultIsBoolean8 = delete delete BOOLEAN;
                                  ~~~~~~~~~~~~~~
!!! error TS2703: The operand of a 'delete' operator must be a property reference.
                                         ~~~~~~~
!!! error TS2703: The operand of a 'delete' operator must be a property reference.
    
    // miss assignment operators
    delete true;
           ~~~~
!!! error TS2703: The operand of a 'delete' operator must be a property reference.
    delete BOOLEAN;
           ~~~~~~~
!!! error TS2703: The operand of a 'delete' operator must be a property reference.
    delete foo();
           ~~~~~
!!! error TS2703: The operand of a 'delete' operator must be a property reference.
    delete true, false;
           ~~~~
!!! error TS2703: The operand of a 'delete' operator must be a property reference.
    delete objA.a;
    delete M.n;